<resources>
    <string name="app_name">Breaking Bad</string>
    <string name="name">Name: </string>
    <string name="nickname">Nickname: </string>
    <string name="status">Status: </string>
    <string name="birthday">Birthday:</string>
    <string name="occupations">Occupations:</string>
    <string name="appearances">Appearances:</string>
    <string name="quotes">quotes:</string>
</resources>